--- a/app/src/main/res/layout/fragment_categories_specialists.xml
+++ b/app/src/main/res/layout/fragment_categories_specialists.xml
@@ -4,20 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.app.CategoriesFragment">
-
+    tools:context=".ui.app.CategoriesSpecialistsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvCategories"
+        android:id="@+id/rvSpecList"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
-        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-        app:spanCount="2"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:listitem="@layout/item_categories_info" />
+        tools:listitem="@layout/item_specialists_info" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
