--- a/app/src/main/res/layout/fragment_favorite_specialists.xml
+++ b/app/src/main/res/layout/fragment_favorite_specialists.xml
@@ -6,14 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".ui.app.FavoriteSpecialistsFragment">
 
-
     <TextView
-        android:id="@+id/tvLikeNews"
+        android:id="@+id/tvLike"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif"
         android:padding="20dp"
-        android:text="@string/textView_like_news"
+        android:text="Избранное"
         android:textColor="@color/black"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -21,7 +20,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvLikePriceList"
+        android:id="@+id/rvLike"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="4dp"
@@ -29,5 +28,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvLikeNews" />
+        app:layout_constraintTop_toBottomOf="@id/tvLike" />
 </androidx.constraintlayout.widget.ConstraintLayout>
