--- a/app/src/main/res/layout/fragment_registration_account_h_r.xml
+++ b/app/src/main/res/layout/fragment_registration_account_h_r.xml
@@ -166,7 +166,7 @@
             app:startIconDrawable="?android:attr/fingerprintAuthDrawable">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_hr_surname"
+                android:id="@+id/et_password_hr"
                 android:layout_width="match_parent"
                 android:layout_height="60dp"
                 android:fontFamily="@font/alata"
