--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/bottom_home"
+        android:id="@+id/bottom_list_spec"
         android:icon="@drawable/baseline_home_24"
-        android:title="Home" />
+        android:title="Главный экран" />
+
     <item
         android:id="@+id/bottom_categories"
-        android:icon="@drawable/nav_home"
-        android:title="Categories" />
+        android:icon="@drawable/baseline_category_24"
+        android:title="Категории" />
+
     <item
         android:id="@+id/bottom_like"
-        android:icon="@drawable/nav_home"
-        android:title="Like" />
+        android:icon="@drawable/baseline_favorite_24"
+        android:title="Избранное" />
+
+
     <item
-        android:id="@+id/bottom_profile"
-        android:icon="@drawable/nav_home"
-        android:title="Profile" />
+        android:id="@+id/bottom_notification"
+        android:icon="@drawable/round_notifications_24"
+        android:title="Уведомления" />
+
+
 </menu>
