--- a/app/src/main/res/layout/item_vacancy_info.xml
+++ b/app/src/main/res/layout/item_vacancy_info.xml
@@ -79,6 +79,7 @@
                 android:layout_height="wrap_content"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
+                android:id="@+id/imageView_figma"
                 app:srcCompat="@drawable/figma" />
 
         </com.google.android.material.card.MaterialCardView>
