--- a/app/src/main/res/layout/fragment_detail_user.xml
+++ b/app/src/main/res/layout/fragment_detail_user.xml
@@ -22,6 +22,7 @@
             tools:ignore="MissingConstraints">
 
             <ImageView
+                android:id="@+id/imageDetail"
                 android:layout_width="380dp"
                 android:layout_height="450dp"
                 android:adjustViewBounds="true"
