--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -153,7 +153,7 @@
             android:layout_marginEnd="10dp"
             android:backgroundTint="#0b37ee"
             android:fontFamily="sans-serif-medium"
-            android:text="Create account as user"
+            android:text="Создать аккаунт как пользователь"
             android:textColor="@color/white"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
@@ -171,7 +171,7 @@
             android:layout_marginBottom="12dp"
             android:backgroundTint="#000000"
             android:fontFamily="sans-serif-medium"
-            android:text="Create account as HR"
+            android:text="Создать аккаунт как Рекрутер"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
