--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,6 @@
     <color name="lavender">#8692f7</color>
     <color name="teal_700">#FF018786</color>
     <color name="teal_200">#FF03DAC5</color>
+    <color name="red">#F10606</color>
 
 </resources>
